2014-11-21  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-A.sh: New test.
	* testfileppc32attrs.o.bz2: New test file.
	* Makefile.am (TESTS): Add run-readelf-A.sh.
	(EXTRA_DIST): Add run-readelf-A.sh and testfileppc32attrs.o.bz2.

2014-11-10  Mark Wielaard  <mjw@redhat.com>

	* vdsosyms.c: New test.
	* Makefile.am (check_PROGRAMS): Add vdsosyms.
	(TESTS): Likewise.
	(vdsosyms_LDADD): New variable.

2014-09-10  Petr Machata  <pmachata@redhat.com>

	* dwarf-getmacros.c: Update to use the new macro iteration
	interfaces.
	* run-dwarf-getmacros.sh: Adjust, add a test that uses
	testfile-macros.

2014-10-06  Mark Wielaard  <mjw@redhat.com>

	* run-aggregate-size.sh: Add testfile-sizes3.o test case.
	* testfile-sizes3.o.bz2: New test file.
	* Makefile.am (EXTRA_DIST): Add testfile-sizes3.o.bz2.

2014-10-02  Mark Wielaard  <mjw@redhat.com>

	* run-deleted.sh: Unset VALGRIND_CMD before running deleted.

2014-10-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (check_PROGRAMS): Add aggregate_size.c.
	(TESTS): Add run-aggregate-size.sh.
	(EXTRA_DIST): Add run-aggregate-size.sh, testfile-sizes1.o.bz2
	and testfile-sizes2.o.bz2.
	(aggregate_size_LDADD): New variable.
	* aggregate_size.c: New file.
	* run-aggregate-size.sh: New test.
	* testfile-sizes1.o.bz2: New test file.
	* testfile-sizes2.o.bz2: Likewise.

2014-09-26  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Support NT_FILE for locating files.
	* Makefile.am (TESTS): Add run-linkmap-cut.sh.
	(EXTRA_DIST): Add run-linkmap-cut.sh, linkmap-cut-lib.so.bz2,
	linkmap-cut.bz2 and linkmap-cut.core.bz2 .
	* linkmap-cut-lib.so.bz2: New file.
	* linkmap-cut.bz2: New file.
	* linkmap-cut.core.bz2: New file.
	* run-linkmap-cut.sh: New file.
	* run-unstrip-n.sh: Update its expected output.

2014-08-28  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (check_PROGRAMS): Add deleted and deleted-lib.so.
	(TESTS, EXTRA_DIST): Add run-deleted.sh.
	(deleted_LDADD, deleted_lib_so_LDFLAGS, deleted_lib_so_CFLAGS): New.